--- a/appspec.yml
+++ b/appspec.yml
@@ -18,10 +18,8 @@ hooks:
     - location: scripts/create_test_db.sh
       timeout: 300
       runas: root
-
-# Dont do anything for this commit
-#  ApplicationStop:
-#    - location: scripts/stop_server.sh
-#      timeout: 300
-#      runas: root
+  ApplicationStop:
+    - location: scripts/stop_server.sh
+      timeout: 300
+      runas: root
 
