--- a/appspec.yml
+++ b/appspec.yml
@@ -14,6 +14,7 @@ hooks:
       timeout: 300
       runas: root
   ApplicationStart:
+    - location: scripts/stop_server.sh
     - location: scripts/start_server.sh
     - location: scripts/create_test_db.sh
       timeout: 300
